--- a/.github/workflows/pack_source.yml
+++ b/.github/workflows/pack_source.yml
@@ -87,12 +87,13 @@ jobs:
         cd openwrt
         cd ..
         zip -r artifact.zip ./artifact/
+        ls -lh artifact.zip
         release_tag="R2S-GC404-$(date +%Y-%m-%d)"
         echo "##[set-output name=release_tag;]$release_tag"
     - name: Upload Artifact
       uses: actions/upload-artifact@master
       with:
-        name: ${{ steps.assemble_artifact.outputs.release_tag }}-ROM
+        name: ${{ steps.assemble_artifact.outputs.release_tag }}-sources
         path: ./artifact.zip
     - name: Create Release
       id: create_release
